tests/fixtures/compile-errors/too-many-type-parameters/compile_error.nim
import strformat,options

import ../../../../src/macro-assertions
ErrorBase.MoreThanOneTypeParameter